--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,7 @@
   </head>
 	
   <body>
-	  <h1>express react</h1>
+	  <h1>react components</h1>
       <div id="content"></div>
 	  <script  src="bundle.js"></script>
   </body>
