--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Tuto react svg</title>	  
+    <title>Tuto react svg</title>
+	<link rel="stylesheet" type="text/css" href="./themes/styles.css">
   </head>
 	
   <body>
